--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ section {
     width: 30%;
     border-radius: 60%;
     position: absolute;
-    top: calc(30% - 16px);
+    top: calc(33% - 16px);
 }
 
 .card__title {
@@ -130,11 +130,40 @@ section {
     }
     
     .card__profile img {
-        top: calc(25% - 16px);
+        top: calc(30% - 16px);
     }
 
     .card__title {
-        margin-top: 60px;
+        margin-top: 70px;
+    }
+
+    .card__info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card__info--description {
+        margin-bottom: 15px;
+        border-bottom: 1px solid rgb(49, 49, 49);
+        padding: 10px;
+    }
+    
+}
+
+@media (max-width: 435px) {
+
+    .card__profile img {
+        top: calc(28% - 16px);
+    }
+
+    .card__profile {
+        margin-bottom: 70px;
+    }
+
+    .card__title {
+        margin-top: 40px;
     }
 
     .card__info {
